--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,17 @@
 ---
 
+# Upgrade of sqlite database is not possible - just remove it
+# rm /var/lib/zabbix/zabbix_proxy.db
+
 # KISS - Hardcoded jessie / amd64 as long as we deploy only on one host
-- set_fact: zabbix_version="4.0.2-1+jessie_amd64"
+- set_fact: zabbix_version="4.2.7-1+jessie_amd64"
 - name: Add apt gpg key from zabbix.com
   apt_key: id=A14FE591 url=http://repo.zabbix.com/zabbix-official-repo.key
 
 # Using apt with a deb downloads the deb everytime we call ansible
 - name: Downloading deb
   get_url: 
-    url: http://repo.zabbix.com/zabbix/4.0/debian/pool/main/z/zabbix/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
+    url: http://repo.zabbix.com/zabbix/4.2/debian/pool/main/z/zabbix/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
     dest: /var/cache/apt/archives/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
 
 - name: Installing deb
@@ -37,7 +40,7 @@
   notify: Restart zabbix-proxy
 
 - name: Add zabbix-proxy configuration
-  template: src=local-monheim-zabbix_proxy.conf dest=/etc/zabbix/zabbix_proxy.conf.d/
+  template: src={{ zabbix_proxy_conf }} dest=/etc/zabbix/zabbix_proxy.conf.d/
   notify: Restart zabbix-proxy
 
 # Ensure to use name.service and not only name
