Supports now zabbix v4 and zabbix v5

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,19 +3,22 @@
 # Upgrade of sqlite database is not possible - just remove it
 # rm /var/lib/zabbix/zabbix_proxy.db
 
-# KISS - Hardcoded jessie / amd64 as long as we deploy only on one host
-- set_fact: zabbix_version="4.4.8-1+jessie_amd64"
-- name: Add apt gpg key from zabbix.com
-  apt_key: id=A14FE591 url=http://repo.zabbix.com/zabbix-official-repo.key
+- set_fact:
+    zabbix_proxy_major_version: "{{ zabbix_proxy_version | regex_replace('^([0-9]+\\.[0-9]+)(.*)$', '\\1') }}"
+- set_fact:
+    zabbix_proxy_package: "zabbix-proxy-sqlite3_{{ zabbix_proxy_version }}-1+{{ ansible_distribution_release }}_amd64.deb"
+
+- name: "Add apt gpg key for repo.zabbix.com"
+  copy: src=zabbix-official-repo.gpg dest=/usr/share/keyrings/
 
 # Using apt with a deb downloads the deb everytime we call ansible
 - name: Downloading deb
   get_url: 
-    url: http://repo.zabbix.com/zabbix/4.4/debian/pool/main/z/zabbix/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
-    dest: /var/cache/apt/archives/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
+    url: http://repo.zabbix.com/zabbix/{{ zabbix_proxy_major_version }}/debian/pool/main/z/zabbix/{{ zabbix_proxy_package }}
+    dest: /var/cache/apt/archives/{{ zabbix_proxy_package }}
 
 - name: Installing deb
-  apt: deb=/var/cache/apt/archives/zabbix-proxy-sqlite3_{{ zabbix_version }}.deb
+  apt: deb=/var/cache/apt/archives/{{ zabbix_proxy_package }}
 
 - name: Create /etc/zabbix/zabbix_proxy.conf.d/
   file: path=/etc/zabbix/zabbix_proxy.conf.d/ state=directory
