--- a/templates/local-monheim-zabbix_proxy.conf
+++ b/templates/local-monheim-zabbix_proxy.conf
@@ -21,3 +21,7 @@ TLSPSKIdentity=PSK-{{ zabbix_hostname|default(inventory_hostname) }}
 StartSNMPTrapper=1
 SNMPTrapperFile=/var/lib/zabbix/snmp_trapper
 
+#20490: Aktualisierung Zabbix 4.4 -> 5.0
+# https://github.com/schweikert/fping/issues/118
+Fping6Location=/usr/bin/fping
+
