--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
 - set_fact:
     zabbix_proxy_major_version: "{{ zabbix_proxy_version | regex_replace('^([0-9]+\\.[0-9]+)(.*)$', '\\1') }}"
 - set_fact:
-    zabbix_proxy_package: "zabbix-proxy-sqlite3_{{ zabbix_proxy_version }}-1+debian{{ ansible_distribution_major_version }}_amd64.deb"
+    zabbix_proxy_package: "zabbix-proxy-sqlite3_{{ zabbix_proxy_version }}+debian{{ ansible_distribution_major_version }}_amd64.deb"
 
 - name: "Add apt gpg key for repo.zabbix.com"
   copy:
