--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,5 +3,7 @@
 # See http://docs.ansible.com/playbooks_intro.html for more information about handlers.
 
 - name: Restart zabbix-proxy
-  service: name=zabbix-proxy state=restarted
+  service:
+    name: "{{ zabbix_proxy_servce }}"
+    state: restarted
 
