--- a/tasks/Linux-Debian.yml
+++ b/tasks/Linux-Debian.yml
@@ -1,33 +1,24 @@
 ---
-
 # Upgrade of sqlite database is not possible - just remove it
 # rm /var/lib/zabbix/zabbix_proxy.db
 
-- set_fact:
+- ansible.builtin.set_fact:
     zabbix_proxy_major_version: "{{ zabbix_proxy_version | regex_replace('^([0-9]+\\.[0-9]+)(.*)$', '\\1') }}"
-- set_fact:
+- ansible.builtin.set_fact:
     zabbix_proxy_db_dir: /var/lib/zabbix
     zabbix_proxy_conf_dir2: /etc/zabbix
     zabbix_proxy_confd_dir: /etc/zabbix/zabbix_proxy.conf.d
     zabbix_proxy_conf_file: /etc/zabbix/zabbix_proxy.conf
-    zabbix_proxy_package: "zabbix-proxy-sqlite3_{{ zabbix_proxy_version }}+debian{{ ansible_distribution_major_version }}_amd64.deb"
+    zabbix_proxy_package: zabbix-proxy-sqlite3_{{ zabbix_proxy_version }}+debian{{ ansible_distribution_major_version }}_amd64.deb
     # Ensure to use name.service and not only name
     zabbix_proxy_service_name: zabbix-proxy.service
 
-- name: "Add apt gpg key for repo.zabbix.com"
-  copy:
-    src: zabbix-official-repo.gpg
-    dest: /usr/share/keyrings/
+- name: Remove deprecated files
+  ansible.builtin.file:
+    path: /usr/share/keyrings/zabbix-official-repo.gpg
+    state: absent
 
-# Using apt with a deb downloads the deb everytime we call ansible
-- name: Downloading deb
-  get_url: 
-    url: http://repo.zabbix.com/zabbix/{{ zabbix_proxy_major_version }}/debian/pool/main/z/zabbix/{{ zabbix_proxy_package }}
-    dest: /var/cache/apt/archives/{{ zabbix_proxy_package }}
+- ansible.builtin.include_tasks: install.yml
 
-- name: Installing deb
-  apt:
-    deb: /var/cache/apt/archives/{{ zabbix_proxy_package }}
   # 2023-05-08, v6.4.2: No restart by debian package
-  notify: Restart zabbix-proxy
-
+  #notify: Restart zabbix-proxy
