Switched from zabbix_proxy_pkg_name_prefix to zabbix_server_pkg_name_prefix

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,6 @@
 
 - name: Restart zabbix-proxy
   ansible.builtin.service:
-    name: "{{ zabbix_proxy_servce }}"
+    name: "{{ zabbix_proxy_service }}"
     state: restarted
   listen: apt-package-has-been-changed
