--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,21 +1,24 @@
 ---
-# mit-ansible-install-package-from-apt-source
+# mit-ansible-install-package-from-apt-source 2025-01-11
 # 2023-10-12: Initial version
 # 2024-09-18: Cosmetic updates (ansible-lint)
 # 2024-09-19: Added handler "apt-package-has-been-changed"
+# 2025-01-11: Cosmetic updates (Removed ansible-lint warnings)
 
-- ansible.builtin.set_fact:
-    ansible_role_name: mit.zabbix-proxy
+- name: Set defaults
+  ansible.builtin.set_fact:
     apt_keyrings: /etc/apt/keyrings
     # used for filenames
     visible_name: zabbix-official-repo
-- ansible.builtin.set_fact:
+- name: Set defaults
+  ansible.builtin.set_fact:
     local_apt_key: "{{ apt_keyrings }}/{{ visible_name }}.gpg"
-- ansible.builtin.set_fact:
+- name: Set defaults
+  ansible.builtin.set_fact:
     apt_package: zabbix-proxy-sqlite3=1:{{ zabbix_server_version }}
     apt_source_list_name: local-{{ visible_name }}.list
-    apt_repository: deb [signed-by={{ local_apt_key }}] https://repo.zabbix.com/zabbix/{{ zabbix_server_major_version }}/debian {{ ansible_distribution_release }}
-      main
+    apt_repository: deb [signed-by={{ local_apt_key }}]\
+                    https://repo.zabbix.com/zabbix/{{ zabbix_server_major_version }}/debian {{ ansible_distribution_release }} main
     gpg_key_src: https://repo.zabbix.com/zabbix-official-repo.key
 
 # No need to change anything beyond this line
@@ -24,11 +27,12 @@
   ansible.builtin.file:
     path: "{{ apt_keyrings }}"
     state: directory
+    mode: '755'
 - name: Install gpg
   ansible.builtin.apt:
     pkg: gpg
 - name: Add apt gpg key
-  ansible.builtin.shell: wget -q -O - {{ gpg_key_src }} | gpg --dearmor > {{ local_apt_key }}
+  ansible.builtin.shell: set -o pipefail && wget -q -O - {{ gpg_key_src }} | gpg --dearmor > {{ local_apt_key }}
   args:
     creates: "{{ local_apt_key }}"
   environment: "{{ proxy_env }}"
@@ -52,8 +56,9 @@
   ansible.builtin.file:
     path: /etc/apt/sources.list.d/{{ apt_source_list_name }}
     state: absent
-- name: Add {{ apt_source_list_name }}.disabled
+- name: Add {{ apt_source_list_name }}.disabled # noqa name[template]
   ansible.builtin.template:
     src: local-apt.list
     dest: /etc/apt/sources.list.d/{{ apt_source_list_name }}.disabled
+    mode: '644'
   changed_when: false
