--- a/tasks/Linux-Debian.yml
+++ b/tasks/Linux-Debian.yml
@@ -2,14 +2,17 @@
 # Upgrade of sqlite database is not possible - just remove it
 # rm /var/lib/zabbix/zabbix_proxy.db
 
-- ansible.builtin.set_fact:
+- name: Set defaults
+  ansible.builtin.set_fact:
+    zabbix_distribution_release: "{{ 'ubuntu' + ansible_lsb.release if (ansible_distribution == 'Ubuntu') else ansible_distribution_release }}"
     zabbix_server_major_version: "{{ zabbix_server_version | regex_replace('^([0-9]+\\.[0-9]+)(.*)$', '\\1') }}"
-- ansible.builtin.set_fact:
+- name: Set defaults
+  ansible.builtin.set_fact:
     zabbix_proxy_db_dir: /var/lib/zabbix
     zabbix_proxy_conf_dir2: /etc/zabbix
     zabbix_proxy_confd_dir: /etc/zabbix/zabbix_proxy.conf.d
     zabbix_proxy_conf_file: /etc/zabbix/zabbix_proxy.conf
-    zabbix_proxy_package: zabbix-proxy-sqlite3_{{ zabbix_server_version }}+debian{{ ansible_distribution_major_version }}_amd64.deb
+    zabbix_proxy_package: zabbix-proxy-sqlite3_{{ zabbix_server_version }}+{{ zabbix_distribution_release }}{{ ansible_distribution_major_version }}_amd64.deb
     # Ensure to use name.service and not only name
     zabbix_proxy_service_name: zabbix-proxy.service
 
@@ -18,7 +21,8 @@
     path: /usr/share/keyrings/zabbix-official-repo.gpg
     state: absent
 
-- ansible.builtin.include_tasks: install.yml
+- name: Include install.yml
+  ansible.builtin.include_tasks: install.yml
 
   # 2023-05-08, v6.4.2: No restart by debian package
-  #notify: Restart zabbix-proxy
+  # notify: Restart zabbix-proxy
