--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,9 +1,10 @@
 ---
-# mit-ansible-install-package-from-apt-source 2025-01-11
+# mit-ansible-install-package-from-apt-source 2025-01-28
 # 2023-10-12: Initial version
 # 2024-09-18: Cosmetic updates (ansible-lint)
 # 2024-09-19: Added handler "apt-package-has-been-changed"
 # 2025-01-11: Cosmetic updates (Removed ansible-lint warnings)
+# 2025-01-28: Cosmetic updates (Removed ansible-lint warnings)
 
 - name: Set defaults
   ansible.builtin.set_fact:
@@ -15,10 +16,10 @@
     local_apt_key: "{{ apt_keyrings }}/{{ visible_name }}.gpg"
 - name: Set defaults
   ansible.builtin.set_fact:
-    apt_package: zabbix-proxy-sqlite3=1:{{ zabbix_server_version }}
+    apt_package: zabbix-proxy-sqlite3=1:{{ zabbix_server_version }}{{ "+" + zabbix_distribution_release if (ansible_distribution=='Ubuntu') }}
     apt_source_list_name: local-{{ visible_name }}.list
-    apt_repository: deb [signed-by={{ local_apt_key }}]\
-                    https://repo.zabbix.com/zabbix/{{ zabbix_server_major_version }}/debian {{ ansible_distribution_release }} main
+    apt_repository: deb [signed-by={{ local_apt_key }}]
+                    https://repo.zabbix.com/zabbix/{{ zabbix_server_major_version }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} main
     gpg_key_src: https://repo.zabbix.com/zabbix-official-repo.key
 
 # No need to change anything beyond this line
@@ -31,8 +32,8 @@
 - name: Install gpg
   ansible.builtin.apt:
     pkg: gpg
-- name: Add apt gpg key
-  ansible.builtin.shell: set -o pipefail && wget -q -O - {{ gpg_key_src }} | gpg --dearmor > {{ local_apt_key }}
+- name: Add apt gpg key # noqa: risky-shell-pipe command-instead-of-module
+  ansible.builtin.shell: wget -q -O - {{ gpg_key_src }} | gpg --dearmor > {{ local_apt_key }}
   args:
     creates: "{{ local_apt_key }}"
   environment: "{{ proxy_env }}"
